--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+*{
+  font-family: "Epunda Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
