--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 *{
-  font-family: "Epunda Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
+    font-family: "Iceberg", sans-serif;
+  font-weight: 400;
   font-style: normal;
 }
 :root {
