--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 *{
-    font-family: "Iceberg", sans-serif;
+       font-family: "Agbalumo", system-ui;
   font-weight: 400;
   font-style: normal;
 }
