updation of para fonts and a tags , addition of placeholder images and increasing page heights

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,6 +1,16 @@
 @import "tailwindcss";
 
-
+p{
+ font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+a{
+ font-family: "Gochi Hand", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
 :root {
   --background: #ffffff;
