updated frontend for new theme and fixing umpiring bugs

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
-p{
+*{
  font-family: "Caveat", cursive;
-  font-optical-sizing: auto;
+
   font-weight: 700;
   font-style: normal;
 }
